# FlappyBird-clone

./: CMakeLists.txt  README.md  main.cpp
headers/: game.hpp  gameobject.hpp  pipe.hpp  player.hpp
src/: game.cpp  gameobject.cpp  pipe.cpp  player.cpp
